Update for new stuff
Updated personal information and links in the landing page.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Guleed Nuh</h1>
-								<p>Computer Science student at George Mason University</p>
+								<p>Health Informatics Student @ The University of Washington</p>
 							</div>
 						</div>
 						<nav>
@@ -43,7 +43,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<p>Welcome to my personal website. I'm currently a student at George Mason University, pursuing a Bachelor's of Science in CS. I've been developing multiple skills in different programming languages throughout my time a student. I have a preference for Python (as it's the first one I've learned), but I've also done some programming in JS among others. I really enjoy networking and learning from others, so feel free to message me on LinkedIn.</p>
+								<p>Welcome to my personal website. I'm currently a student at The University of Washington, pursuing a Bachelor's of Science in Health Informatics. I've been developing multiple skills in data analysis and programming throughout my time a student. I have a preference for Python (as it's the first language I've learned), but I've also done some programming in JS. I really enjoy networking and learning from others, so feel free to message me on LinkedIn.</p>
 								<p>Check out my Github (https://github.com/Guleed-N), where I post my projects. One of my favorites was a recomendation app using the Yelp API.</p>
 							</article>
 
@@ -318,3 +318,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
